; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_server_ocsp_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_server_ocsp_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_TLSEXT_ERR_ALERT_FATAL = common dso_local global i32 0, align 4
@SSL_TLSEXT_ERR_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @server_ocsp_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @server_ocsp_cb(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = call i8* @OPENSSL_malloc(i32 1)
  store i8* %7, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @SSL_TLSEXT_ERR_ALERT_FATAL, align 4
  store i32 %11, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = load i8, i8* %13, align 1
  %15 = load i8*, i8** %6, align 8
  store i8 %14, i8* %15, align 1
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @SSL_set_tlsext_status_ocsp_resp(i32* %16, i8* %17, i32 1)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %12
  %21 = load i32, i32* @SSL_TLSEXT_ERR_ALERT_FATAL, align 4
  store i32 %21, i32* %3, align 4
  br label %24

22:                                               ; preds = %12
  %23 = load i32, i32* @SSL_TLSEXT_ERR_OK, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %22, %20, %10
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i8* @OPENSSL_malloc(i32) #1

declare dso_local i32 @SSL_set_tlsext_status_ocsp_resp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
